fix draft activity form submit button alignment issue

--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -1985,6 +1985,15 @@ a.layout-grid-view {
   border-top: 1px solid #eee;
 }
 
+@media screen and (max-width: 480px) {
+  .bp-nouveau-activity-form-placeholder- .has-draft .whats-new-form-footer,
+  .activity-update-form .has-draft .whats-new-form-footer {
+    flex-direction: column;
+    align-items: center;
+    padding-top: 1em;
+  }
+}
+
 .bp-nouveau-activity-form-placeholder- #whats-new-toolbar .post-elements-buttons-item.disable,
 .bp-nouveau-activity-form-placeholder- #whats-new-toolbar .post-elements-buttons-item.no-click:not(.active),
 .activity-update-form #whats-new-toolbar .post-elements-buttons-item.disable,
